--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .main-head{
     grid-area: header;
+    align-self: center;
 }
 
 .content{
@@ -39,30 +40,36 @@
     .wrapper{
         grid-template-columns: 1fr 3fr;
         grid-template-areas: 
-            "header header"
-            "nav nav"
+            "header nav"
             "sidebar content"
             "ad footer";
     }
     nav ul{
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
+}
+
+nav ul li {
+    margin-right: 20px;
+    list-style-type: none;
+    width: 60px;
 }
 
 @media (min-width:700px){
     .wrapper {
         grid-template-columns: 1fr 4fr 1fr;
         grid-template-areas:
-            "header header header"
-            "nav nav nav"
+            "header header nav"
             "content content sidebar"
-            "nav content ad"
+            "content content ad"
             "footer footer footer";
     }
     nav ul{
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
+
+   
     
 }
